# tracts

./: .buildinfo  .gitignore  README.html  README.md  README.txt  core.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html  test  test_models.py  tracts.py  tracts_conda_env.yml
.doctrees/: core.doctree  environment.pickle  index.doctree  sg_execution_times.doctree
_sources/: sg_execution_times.rst.txt
api/: core_modules.html  demography.html  index.html  phase_type.html
auto_examples/: index.html  sg_execution_times.html
core/: __init__.py  tracts.py
docs/: requirements.txt
example/: .gitattributes  ASW_tractlength.py  ASW_tractlength.py~  ASW_tractlength_fix.py  FancyPlot.py  GALLERY_HEADER.rst  fancyplotting.nb  fancyplotting.py  matplotlibrc  out2_bins  out2_dat  out2_mig  out2_pred  out_mig  out_pred  pp_px.py  toy_example.ipynb  toy_example_profile.ipynb
examples/: data_description.html  data_processing.html  index.html
tests/: benchmark.py  driver_test.yaml  pp.yaml  pp_multipop.yaml  pp_px_multipop.yaml  readme.md  run_tests.py  sex_biased_pp_px.yaml  test.py  test_ancestry_fixing.py  test_ancestry_proportions.py  test_chromosome.py  test_core.py  test_data.py  test_dioecious.py  test_driver.py  test_input.py  test_models.py  test_multipop.py  test_parametrized_demography.py  test_run_examples.py  test_sex_bias.py  test_util.py
tracts/: __init__.py  chrom.py  chromosome.py  chropair.py  composite_demographic_model.py  core.py  demographic_model.py  doc_utils.py  driver.py  (+11 more)
(+728 files in other folders)
