[build-system]
requires = ["setuptools==68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tracts"
version = "0.0.1"
license = { text = "MIT" }
authors = [
  { name="Simon Gravel", email="simon.gravel@mcgill.ca" },
]
description = "A set of classes and definitions used to model migration histories based on ancestry tracts in admixed individuals. Time-dependent gene-flow from multiple populations can be modeled."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sgravel/tracts/blob/devel"
"Bug Tracker" = "https://github.com/sgravel/tracts/issues"
